utility script template update: use node scripts
Along with the k8s changes, we're getting rid of a constantly running
python-worker, and moved various utility scripts to run on the node
server. The templates to easily run these on a server that's been
deployed to also needed to be updated.

--- a/deploy/templates/add-user-to-org.j2
+++ b/deploy/templates/add-user-to-org.j2
@@ -3,4 +3,4 @@
 USER_NAME=$1
 ORGANIZATION_NAME=$2
 
-docker exec -ti adi_python-worker.1.$(docker service ps adi_python-worker -q --no-trunc | head -n1) ./add_user_to_org.py $USER_NAME $ORGANIZATION_NAME
+docker exec -ti adi_server.1.$(docker service ps adi_server -q --no-trunc | head -n1) npx ts-node tasks/add-user-to-org.ts $USER_NAME $ORGANIZATION_NAME
